--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<main>
 				<div class="ba-home__title ba-text-center ba-container">
 					<h1>the right ingredients for the right food</h1>
-					<a class="ba-button ba-button__home" href="#">BOOK A TABLE</a>
+					<a class="ba-button ba-button__black ba-button__home" href="#">BOOK A TABLE</a>
 					<a class="ba-button ba-button__home" href="#">SEE THE MENU</a>
 				</div>
 			</section>
@@ -103,38 +103,98 @@
 					</div>
 				</div>
 			</section>
-			<section class="" id="menu">
-				<div class="ba-float-left">
+			<section class="ba-section-menu" id="menu">
+			<div class="ba-container">
+			<div class="ba-grid">
+				<div class="ba-width-1-2 ba-section-menu__col">
 					<h2>Appetisers</h2>
-					<h4>Tzatsiki <span>$3.99</span></h4>
-					<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
-					<h4>Aubergine_Salad<span>$5.50</span></h4>
-					<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
-					<h4>Aubergine_Salad<span>$5.25</span></h4>
-					<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
+					<ul class="ba-section-menu__items">
+						<li>
+						<div class="ba-section-menu__titles cf">
+							<h4>Tzatsiki<span>$3.99</span></h4>
+						</div>
+							<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
+						</li>
+						<li>
+						<div class="ba-section-menu__titles cf">
+							<h4>Aubergine_Salad<span>$5.50</span></h4>
+						</div>
+							<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
+						</li>
+						<li>
+						<div class="ba-section-menu__titles cf">
+							<h4>Aubergine_Salad<span>$5.25</span></h4>
+						</div>
+							<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
+						</li>
+					</ul>
 					<h2>Salads</h2>
-					<h4>Olive_Special<span>$5.99</span></h4>
-					<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
-					<h4>Greek_Salad<span>$5.50</span></h4>
-					<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
-					<h4>Gusto_Salad<span>$5.25</span></h4>
-					<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
+					<ul class="ba-section-menu__items">
+						<li>
+						<div class="ba-section-menu__titles cf">
+							<h4>Olive_Special<span>$5.99</span></h4>
+						</div>
+							<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
+						</li>
+						<li class="ba-section-menu__special">
+						<div class="ba-section-menu__titles cf">
+							<h4>Greek_Salad<span>$5.50</span></h4>
+						</div>
+							<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
+						</li>
+						<li>
+						<div class="ba-section-menu__titles cf">
+							<h4>Gusto_Salad<span>$5.25</span></h4>
+						</div>
+							<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
+						</li>
+					</ul>
 				</div>
-				<div class="ba-float-right">
-					<h2>Starters<span></span></h2>
-					<h4>Haloumi<span>$3.99</span></h4>
-					<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
-					<h4>Spinach_Pie<span>$5.50</span></h4>
-					<p>.Pureed eggplant, garlic, green pepper and tomato dip.</p>
+				<div class="ba-width-1-2 ba-section-menu__col">
+					<h2>Starters</h2>
+					<ul class="ba-section-menu__items">
+						<li>
+						<div class="ba-section-menu__titles cf">
+							<h4>Haloumi<span>$3.99</span></h4>
+						</div>
+							<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
+						</li>
+						<li>
+						<div class="ba-section-menu__titles cf">
+							<h4>Spinach_Pie<span>$5.50</span></h4>
+						</div>
+							<p>.Pureed eggplant, garlic, green pepper and tomato dip.</p>
+						</li>
+					</ul>
 					<h2>Main Dishes</h2>
-					<h4>Cornish_Mackerel<span>$5.99</span></h4>
-					<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
-					<h4>Roast_Lamb<span>$5.50</span></h4>
-					<p>.Pureed eggplant, garlic, green pepper and tomato dip.</p>
-					<h4>Fried_Chicken<span>$5.25</span></h4>
-					<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
-					<h4>Pastitsio<span>$5.99</span></h4>
-					<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
+					<ul class="ba-section-menu__items">
+						<li>
+						<div class="ba-section-menu__titles cf">
+							<h4>Cornish_Mackerel<span>$5.99</span></h4>
+						</div>
+							<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
+						</li>
+						<li class="ba-section-menu__special">
+						<div class="ba-section-menu__titles cf">
+							<h4>Roast_Lamb<span>$5.50</span></h4>
+						</div>
+							<p>.Pureed eggplant, garlic, green pepper and tomato dip.</p>
+						</li>
+						<li>
+						<div class="ba-section-menu__titles cf">
+							<h4>Fried_Chicken<span>$5.25</span></h4>
+						</div>
+							<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
+						</li>
+						<li>
+						<div class="ba-section-menu__titles cf">
+							<h4>Pastitsio<span>$5.99</span></h4>
+						</div>
+							<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
+						</li>
+					</ul>
+				</div>
+				</div>
 				</div>
 			</section>
 			</main>
