--- a/index.html
+++ b/index.html
@@ -104,100 +104,160 @@
 				</div>
 			</section>
 			<section class="ba-section-menu" id="menu">
-			<div class="ba-container">
-			<div class="ba-grid">
-				<div class="ba-width-1-2 ba-section-menu__col">
-					<h2>Appetisers</h2>
-					<ul class="ba-section-menu__items">
-						<li>
-						<div class="ba-section-menu__titles cf">
-							<h4>Tzatsiki<span>$3.99</span></h4>
+				<div class="ba-container">
+					<div class="ba-grid">
+						<div class="ba-width-1-2 ba-section-menu__col">
+							<h2>Appetisers</h2>
+							<ul class="ba-section-menu__items">
+								<li>
+									<div class="ba-section-menu__titles cf">
+										<h4>Tzatsiki<span>$3.99</span></h4>
+									</div>
+									<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
+								</li>
+								<li>
+									<div class="ba-section-menu__titles cf">
+										<h4>Aubergine_Salad<span>$5.50</span></h4>
+									</div>
+									<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
+								</li>
+								<li>
+									<div class="ba-section-menu__titles cf">
+										<h4>Aubergine_Salad<span>$5.25</span></h4>
+									</div>
+									<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
+								</li>
+							</ul>
+							<h2>Salads</h2>
+							<ul class="ba-section-menu__items">
+								<li>
+									<div class="ba-section-menu__titles cf">
+										<h4>Olive_Special<span>$5.99</span></h4>
+									</div>
+									<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
+								</li>
+								<li class="ba-section-menu__special">
+									<div class="ba-section-menu__titles cf">
+										<h4>Greek_Salad<span>$5.50</span></h4>
+									</div>
+									<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
+								</li>
+								<li>
+									<div class="ba-section-menu__titles cf">
+										<h4>Gusto_Salad<span>$5.25</span></h4>
+									</div>
+									<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
+								</li>
+							</ul>
 						</div>
-							<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
-						</li>
-						<li>
-						<div class="ba-section-menu__titles cf">
-							<h4>Aubergine_Salad<span>$5.50</span></h4>
+						<div class="ba-width-1-2 ba-section-menu__col">
+							<h2>Starters</h2>
+							<ul class="ba-section-menu__items">
+								<li>
+									<div class="ba-section-menu__titles cf">
+										<h4>Haloumi<span>$3.99</span></h4>
+									</div>
+									<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
+								</li>
+								<li>
+									<div class="ba-section-menu__titles cf">
+										<h4>Spinach_Pie<span>$5.50</span></h4>
+									</div>
+									<p>.Pureed eggplant, garlic, green pepper and tomato dip.</p>
+								</li>
+							</ul>
+							<h2>Main Dishes</h2>
+							<ul class="ba-section-menu__items">
+								<li>
+									<div class="ba-section-menu__titles cf">
+										<h4>Cornish_Mackerel<span>$5.99</span></h4>
+									</div>
+									<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
+								</li>
+								<li class="ba-section-menu__special">
+									<div class="ba-section-menu__titles cf">
+										<h4>Roast_Lamb<span>$5.50</span></h4>
+									</div>
+									<p>.Pureed eggplant, garlic, green pepper and tomato dip.</p>
+								</li>
+								<li>
+									<div class="ba-section-menu__titles cf">
+										<h4>Fried_Chicken<span>$5.25</span></h4>
+									</div>
+									<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
+								</li>
+								<li>
+									<div class="ba-section-menu__titles cf">
+										<h4>Pastitsio<span>$5.99</span></h4>
+									</div>
+									<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
+								</li>
+							</ul>
 						</div>
-							<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
-						</li>
-						<li>
-						<div class="ba-section-menu__titles cf">
-							<h4>Aubergine_Salad<span>$5.25</span></h4>
-						</div>
-							<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
-						</li>
-					</ul>
-					<h2>Salads</h2>
-					<ul class="ba-section-menu__items">
-						<li>
-						<div class="ba-section-menu__titles cf">
-							<h4>Olive_Special<span>$5.99</span></h4>
-						</div>
-							<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
-						</li>
-						<li class="ba-section-menu__special">
-						<div class="ba-section-menu__titles cf">
-							<h4>Greek_Salad<span>$5.50</span></h4>
-						</div>
-							<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
-						</li>
-						<li>
-						<div class="ba-section-menu__titles cf">
-							<h4>Gusto_Salad<span>$5.25</span></h4>
-						</div>
-							<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
-						</li>
-					</ul>
-				</div>
-				<div class="ba-width-1-2 ba-section-menu__col">
-					<h2>Starters</h2>
-					<ul class="ba-section-menu__items">
-						<li>
-						<div class="ba-section-menu__titles cf">
-							<h4>Haloumi<span>$3.99</span></h4>
-						</div>
-							<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
-						</li>
-						<li>
-						<div class="ba-section-menu__titles cf">
-							<h4>Spinach_Pie<span>$5.50</span></h4>
-						</div>
-							<p>.Pureed eggplant, garlic, green pepper and tomato dip.</p>
-						</li>
-					</ul>
-					<h2>Main Dishes</h2>
-					<ul class="ba-section-menu__items">
-						<li>
-						<div class="ba-section-menu__titles cf">
-							<h4>Cornish_Mackerel<span>$5.99</span></h4>
-						</div>
-							<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
-						</li>
-						<li class="ba-section-menu__special">
-						<div class="ba-section-menu__titles cf">
-							<h4>Roast_Lamb<span>$5.50</span></h4>
-						</div>
-							<p>.Pureed eggplant, garlic, green pepper and tomato dip.</p>
-						</li>
-						<li>
-						<div class="ba-section-menu__titles cf">
-							<h4>Fried_Chicken<span>$5.25</span></h4>
-						</div>
-							<p>Pureed eggplant, garlic, green pepper and tomato dip.</p>
-						</li>
-						<li>
-						<div class="ba-section-menu__titles cf">
-							<h4>Pastitsio<span>$5.99</span></h4>
-						</div>
-							<p>Refreshing traditional cucumber and garlic yoghurt dip.</p>
-						</li>
-					</ul>
-				</div>
-				</div>
+					</div>
 				</div>
 			</section>
-			</main>
+			<section class="ba-section-reviews" id="reviews">
+				<div class="ba-container">
+					<div class="ba-text-center ba-section-reviews__info">
+						<h2>Guest Reviews</h2>
+						<p>If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming back for more. Perfect materials and freshly baked food, delicious Lambda cakes,  muffins, and gourmet coffees make us hard to resist! Stop in today and check us out!</p>
+						<span>- food inc, New York</span>
+					</div>
+				</div>
+			</section>
+			<section class="ba-section-reservations">
+				<div class="ba-container">
+					<div class="ba-grid">
+						<div class="ba-width-1-2 cf">
+								<img class="ba-float-left" src="img/reservations1.jpg" alt="reservations1">
+								<img class="ba-float-right" src="img/reservations2.jpg" alt="reservations2">
+						</div>
+						<div class="ba-width-1-2">
+							<div class="ba-text-center ba-reservations__info">
+								<h2>Just the right food</h2>
+								<p>If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming back for more. Perfect materials and freshly baked food.</p>
+								<p>Delicious Lambda cakes,  muffins, and gourmet coffees make us hard to resist! Stop in today and check us out! Perfect materials and freshly baked food.</p>
+								<form action="#" method="post" class="ba-reservations__form">
+								 <div class="ba-grid">
+								 	<div class="ba-width-1-2">
+								 		<legend>Name</legend>
+								 		<label class="ba-contact-form__field">
+								 			<input type="name" name="username" required placeholder="your name *">
+								 			</input>
+								 		</label>
+								 		<legend>Date</legend>
+								 		<label class="ba-contact-form__field">
+								 			<input type="date" name="date" required ></input>
+								 		</label>
+								 	</div>
+								 	<div class="ba-width-1-2">
+								 		<legend>Name</legend>
+								 		<label class="ba-contact-form__field">
+								 			<input type="email" name="useremail" required placeholder="your email *"></input>
+								 		</label>
+								 		<legend>Party number</legend>
+								 		<label class="ba-contact-form__field">
+								 			<select name="party" value="party number">
+												  <option value="first">1</option>
+												  <option value="second">2</option>
+												  <option value="third">3</option>
+												  <option value="fourth">4</option>
+												  <option value="fifth">5</option>
+												  <option selected value="party number">party number</option>
+												  <option value="seventh">7</option>
+											</select>
+								 		</label>
+								 	</div>
+								 </div>
+								 <button type="submit" class="ba-button--form">Book now!</button>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
 		<footer class="ba-footer">
 
 		</footer>
