--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Lambda</title>
+	<title>Lambda restaurant</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="css/normalize.css" />
 	<link rel="stylesheet" href="css/layout.css" />
 	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 	<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -206,7 +207,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="ba-section-reservations">
+			<section class="ba-section-reservations" id="reservations">
 				<div class="ba-container">
 					<div class="ba-grid">
 						<div class="ba-width-1-2 cf">
@@ -232,7 +233,7 @@
 								 		</label>
 								 	</div>
 								 	<div class="ba-width-1-2">
-								 		<legend>Name</legend>
+								 		<legend>Email</legend>
 								 		<label class="ba-contact-form__field">
 								 			<input type="email" name="useremail" required placeholder="your email *"></input>
 								 		</label>
@@ -257,10 +258,41 @@
 					</div>
 				</div>
 			</section>
-		</main>
+			</main>
 		<footer class="ba-footer">
-
+			<div class="ba-container">
+				<div class="ba-grid ba-text-center">
+					<div class="ba-width-1-3">
+						<h4>About Us</h4>
+						<p>Lambda's new and expanded Chelsea location represents a truly authentic <span>Greek</span> patisserie, featuring 		breakfasts of fresh croissants and steaming bowls of café.
+							Lamda the best restaurant in town</p>
+					</div>
+					<div class="ba-width-1-3">
+						<h4>Opening Hours</h4>
+						<p><b>Mon-Thu:</b> 7:00am-8:00pm<br>
+						<b>Fri-Sun:</b> 7:00am-10:00pm</p>
+						<div class="ba-footer__cards">
+							<a href="#" class="fa fa-cc-mastercard"></a>
+							<a href="#" class="fa fa-cc-paypal"></a>
+							<a href="#" class="fa fa-cc-visa"></a>
+							<a href="#" class="fa fa-cc-discover"></a>
+						</div>
+					</div>
+					<div class="ba-width-1-3">
+						<h4>Our Location</h4>
+						<p><b>19th Paradise Street Sitia<br>
+						128 Meserole Avenue</b></p>
+						<div class="ba-footer__social">
+							<a href="#" class="fa fa-facebook"></a>
+							<a href="#" class="fa fa-youtube"></a>
+							<a href="#" class="fa fa-twitter"></a>
+							<a href="#" class="fa fa-trello"></a>
+						</div>
+					</div>
+				</div>
+			</div>
 		</footer>
+
 		<script src="js/main.js"></script>
 	</body>
 	</html>
