--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 					<a class="ba-float-left ba-logo" href="#">
 						<img src="img/logo.png" alt="lambda">
 					</a>
-					<div>
 						<div class="ba-float-right ba-social">
 							<a href="#">
 								<i class="fa fa-twitter"></i>
@@ -39,7 +38,11 @@
 								<i class="fa fa-facebook"></i>
 							</a>
 						</div>
-						<nav>
+						<nav class="ba-float-right">
+							<button class="ba-toggle">
+								<span class="ba-toggle__icon"></span>
+							</button>
+							<div class="ba-overlay"></div>
 							<ul class="ba-menu ba-float-right">
 								<li>
 									<a href="#home">Home</a>
@@ -61,7 +64,6 @@
 								</li>
 							</ul>
 						</nav>
-					</div>
 				</div>
 			</header>
 			<main>
@@ -292,7 +294,6 @@
 				</div>
 			</div>
 		</footer>
-
 		<script src="js/main.js"></script>
 	</body>
 	</html>
